partial/start fix for alignwide/alignfull

--- a/assets/scss/utilities/_alignment.scss
+++ b/assets/scss/utilities/_alignment.scss
@@ -15,28 +15,46 @@
 
 		@include clearfix;
 	}
-}
 
-.alignwide,
-.alignfull {
-	overflow: hidden;
-	position: relative;
-	left: var(--alignwide-left, 50%);
-	width: var(--alignwide-width, 100vw);
-	max-width: var(--alignwide-max-width, 120%);
-	transform: var(--alignwide-transform, translate(-50%));
-
-	> img {
-		display: inline-block;
-		width: 100%;
-		margin: var(--spacing) auto;
+	.alignwide {
+		margin-left: calc(25% - 25vw);
+		margin-right: calc(25% - 25vw);
+		width: auto;
+		max-width: 1000%;
 	}
+
 }
 
+// TODO: account for alignfull and alignwide in content-sidebar or boxed layouts... so, need to use custom properties for stuff.
 .alignfull {
-	--alignwide-max-width: none;
-	--alignwide-transform: translate(-50vw);
+	clear: both;
+	width: 100vw;
+	max-width: 100vw;
+	margin-left: calc(-50vw + 50%);
+	margin-right: calc(-50vw + 50%);
 }
+
+// .alignwide,
+// .alignfull {
+	// overflow: hidden;
+	// position: relative;
+	// left: var(--alignwide-left, 50%);
+	// width: var(--alignwide-width, 100vw);
+	// max-width: var(--alignwide-max-width, 120%);
+	// transform: var(--alignwide-transform, translate(-50%));
+
+	// TODO: This was breaking stuff with the object-fit cover block image, what was it for?
+	// > img {
+	// 	display: inline-block;
+	// 	width: 100%;
+	// 	margin: var(--spacing) auto;
+	// }
+// }
+
+// .alignfull {
+// 	--alignwide-max-width: none;
+// 	--alignwide-transform: translate(-50vw);
+// }
 
 .content-sidebar,
 .sidebar-content {
